<resources>
    <string name="app_name">TapTheBall</string>
    <string name="name_input">Enter your name:</string>
    <string name="lvl_choose">Please choose level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="top_score">TOP SCORE:</string>
    <string name="field_selector">Select a field:</string>
    <string name="ball_selector">Select a ball:</string>
    <string name="start">START</string>
    <string name="credit">Credit:</string>
    <string name="purchased">Purchased</string>
    <string name="sure">Are you sure you want to buy this ball?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_funds">Not enough funds</string>
    <string name="back">Back</string>
    <string name="back_to_main">Back to menu</string>
    <string name="leader_board">Leaders of the board:</string>
    <string name="play_txt">Play</string>
    <string name="instructions_txt">Instructions</string>
    <string name="highScores_txt">High Scores</string>
    <string name="settings_txt">Settings</string>
    <string name="instructions_full_txt">Welcome to TapTheBall the easiest game to play!. Simply press play, choose your prefered difficulty level and get ready to have some fun! Your main goal is to keep the ball in the air for as much as possible, the more you manage to keep it in the air the harded it gets, as the ball gets smaller earn credits for every time you kick the ball in the air. Use these credits to unlock new balls</string>
    <string name="enter_name">Please enter your name</string>
    <string name="name_missing">Name is missing</string>
    <string name="sound_on">Sound: ON</string>
    <string name="sound_off">Sound: OFF</string>
    <string name="switch_player">Switch player</string>

</resources>
