<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sure"
        android:fontFamily="casual"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="15dp"/>

    <LinearLayout android:id="@+id/bonusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sure"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        android:gravity="center">

        <Button android:id="@+id/yes"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:background="@drawable/textview_shape"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button android:id="@+id/no"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:background="@drawable/textview_shape"
            android:gravity="center"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>