<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstActivity"
    android:background="@drawable/preview">

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo_2" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textview_shape"
        android:text="@string/play_txt"
        android:fontFamily="casual"/>

    <Button
        android:id="@+id/high_scores_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/play_btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textview_shape"
        android:layout_marginTop="20dp"
        android:text="@string/highScores_txt"
        android:fontFamily="casual"/>

    <Button
        android:id="@+id/instructions_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/high_scores_btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textview_shape"
        android:layout_marginTop="20dp"
        android:text="@string/instructions_txt"
        android:fontFamily="casual"/>

</RelativeLayout>
