    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/preview">

        <TextView
            android:id="@+id/instructions_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="50sp"
            android:fontFamily="casual"/>
        <TextView
            android:id="@+id/instructions_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_full_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textSize="25sp"
            android:fontFamily="casual"
            android:textColor="#000000"
            android:background="#4F818181"
            android:layout_below="@+id/instructions_tv"
            android:lineSpacingMultiplier="0.8"
            android:layout_margin="10dp"/>


        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/instructions_text_tv"
            android:background="@drawable/textview_shape"
            android:text="@string/back"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:paddingStart="40sp"
            android:paddingEnd="40sp"
            android:fontFamily="casual"/>


    </RelativeLayout>
