<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preview">

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="50sp"
        android:fontFamily="casual"/>

    <TextView
        android:id="@+id/ball_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ball_selector"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/credit"
        android:textSize="50sp"
        android:fontFamily="casual"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_wraper"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:weightSum="3">


        <TextView
            android:id="@+id/ball_noob_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/ball_med_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="100"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ball_expert_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="casual"
            android:text="250"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ball_wraper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_select"
        android:weightSum="3">

    <ImageButton
        android:id="@+id/noob_ball"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/ball_noob"
        android:layout_weight="1"
        android:background="@color/zeroAlpha" />

    <ImageButton
        android:id="@+id/med_ball"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/ball_med"
        android:layout_weight="1"
        android:background="@color/zeroAlpha" />

    <ImageButton
        android:id="@+id/expert_ball"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ball_expert"
        android:background="@color/zeroAlpha" />

    </LinearLayout>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ball_wraper"
        android:layout_marginTop="100dp"
        android:background="@drawable/textview_shape"
        android:text="@string/start"
        android:textSize="35sp"
        android:padding="20dp"
        android:fontFamily="casual"/>

</RelativeLayout>